Done jwt for user
